--- a/frontend/src/pages/PhonePages/PhonePage.scss
+++ b/frontend/src/pages/PhonePages/PhonePage.scss
@@ -2,6 +2,7 @@
   display: none !important;
 }
 .products-container {
+  background-color: #f2f6f5;
   // checkbox css
 
   .form-group input {
@@ -22,7 +23,7 @@
   }
 
   .form-group label:before {
-    content: "";
+    content: '';
     -webkit-appearance: none;
     background-color: transparent;
     border: 2px solid #0079bf;
@@ -37,7 +38,7 @@
   }
 
   .form-group input:checked + label:after {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 2px;
@@ -111,10 +112,18 @@
     justify-content: right;
   }
   .filter {
+    padding: 2rem;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
     align-self: flex-start;
     position: absolute;
     top: 74%;
     left: 7%;
+    background-color: var(--white);
+    > ol,
+    ul {
+      padding-left: unset;
+    }
   }
   .asc-price {
     background-color: #f8dede;
@@ -129,10 +138,6 @@
     border-radius: 5px;
   }
 
-  .product:hover {
-    border-radius: 2rem;
-    border: solid 0.1rem var(--grey2);
-  }
   // chia cột lọc thương hiệu, giá 1 cột, danh sách sản phẩm 3 cột
   .products-layout {
     display: grid;
@@ -177,13 +182,17 @@
   }
 
   .product {
-    overflow: hidden;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: var(--white);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: all 0.15s linear;
+    &:hover {
+      border-radius: 2rem;
+    }
   }
 
   .product-name {
-    position: relative;
-    top: 0;
-    left: 0;
     margin-bottom: 1.5rem;
     font-weight: 600;
     text-align: left;
@@ -195,7 +204,6 @@
   }
 
   .product .img-container {
-    position: relative;
     cursor: pointer;
   }
 
@@ -206,9 +214,6 @@
   }
 
   .product .addCart {
-    position: relative;
-    left: 0;
-    bottom: 0.6rem;
     background-color: var(--white);
     border-radius: 50%;
     padding: 1.3rem 1.6rem;
@@ -251,7 +256,6 @@
     background: #e2e2e2;
     padding: 1.5rem 2rem 0;
     border-radius: 1rem;
-    position: relative;
     color: var(--grey1);
     margin-bottom: 0.7rem;
   }
@@ -299,7 +303,7 @@
   }
 
   .config-param span:after {
-    content: "";
+    content: '';
     position: absolute;
     z-index: 1;
     left: 40%;
@@ -320,23 +324,24 @@
   .product-btn {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     gap: 0.3rem;
+    font-weight: bold;
   }
 
   .product-btn .btn {
-    font-weight: 300;
     text-align: center;
     white-space: nowrap;
     border-radius: 1rem;
     padding: 0.9rem 2.2rem 0.9rem 2.1rem;
     line-height: 16px;
     cursor: pointer;
-  }
-  .product-btn .btn p {
     font-size: 1.5rem;
   }
 
   .btn-buy {
+    flex: 1;
     color: #fff;
     background: #cb1c22;
     outline: 0;
@@ -361,6 +366,7 @@
   }
 
   .btn-addCart {
+    flex: 3;
     color: #fff;
     background: #99a2aa;
     outline: 0;
@@ -407,19 +413,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 4rem 0;
+    margin-top: 4rem;
+    margin-bottom: 0;
   }
 
   .pagination span {
+    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 4rem;
+    aspect-ratio: 1/1;
     border-radius: 50%;
-    color: var(--black);
+    color: var(--white);
     font-size: 1.3rem;
-    border: 1px solid var(--grey2);
     margin-right: 0.5rem;
     cursor: pointer;
   }
@@ -439,9 +446,6 @@
     background-color: var(--primary);
   }
 
-  .header-spacer,
-  .footer-spacer {
-  }
   // responsive for mobile
 
   @media screen and (max-width: 480px) {
@@ -452,7 +456,9 @@
       display: grid;
       grid-template-columns: repeat(2, 176px); // lặp lại số sp trên 1 dòng
       gap: 1rem;
-      padding: 0 0.5rem;
+      form {
+        margin-bottom: 0rem;
+      }
     }
 
     .product {
@@ -461,24 +467,21 @@
     }
     .product-btn {
       display: flex;
-      flex-direction: row;
-      gap: 0.1rem;
-      justify-content: space-around;
-      justify-items: center;
-      padding-top: 2rem;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-top: 1rem;
       height: 4rem;
     }
 
     .product-btn .btn {
       font-weight: 500;
       text-align: center;
-      border-radius: 1rem;
-      padding: 1rem 1.3rem 0.7rem 1.3rem;
+      border-radius: 0.8rem;
+      padding: 0.625em 1em;
       line-height: 5px;
       cursor: pointer;
-    }
-    .product-btn .btn p {
-      font-size: 1rem;
+      font-size: 1.5rem;
     }
     .filter {
       display: none;
@@ -512,7 +515,7 @@
   --white: #fff;
   --black: #222;
   --grey1: #3a3b3c;
-  --grey2: #828282;
+  --grey2: #cecece;
 }
 
 *,
